@@ -50,13 +50,13 @@ import io.crate.analyze.RerouteCancelShardAnalyzedStatement;
 import io.crate.analyze.RerouteMoveShardAnalyzedStatement;
 import io.crate.analyze.RerouteRetryFailedAnalyzedStatement;
 import io.crate.analyze.RestoreSnapshotAnalyzedStatement;
+import io.crate.auth.user.UserManager;
 import io.crate.blob.v2.BlobAdminClient;
 import io.crate.data.Row;
 import io.crate.execution.ddl.tables.AlterTableOperation;
 import io.crate.execution.ddl.tables.TableCreator;
-import io.crate.metadata.Functions;
 import io.crate.expression.udf.UserDefinedFunctionDDLClient;
-import io.crate.auth.user.UserManager;
+import io.crate.metadata.Functions;
 import io.crate.user.SecureHash;
 import io.crate.user.UserActions;
 import org.elasticsearch.action.admin.cluster.reroute.TransportClusterRerouteAction;
